--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,8 @@
 html, body {
     margin: 0; height: 100%; overflow: hidden;
-    color: white;
     font-family: 'Lato', Helvetica, sans-serif;
     font-weight: 200;
     line-height: 1.8;
-}
-
-* {
-    color: white;
 }
 
 p {
@@ -32,6 +27,13 @@ i {
 .map-element {
     border-radius: 4px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+#infowindow {
+    font-size: 0.875rem;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-left: 22px;
 }
 
 /* audio control */
