--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,6 @@ i {
     font-family: Georgia;
 }
 
-a {
-    color: white;
-}
-
 .paraspacer {
     height: 1rem;
 }
@@ -65,6 +61,10 @@ a {
     color: white;
     opacity: 1;
     transition: all 200ms;
+}
+
+#window a {
+    color: #bfbfbf;
 }
 
 #window.closed {
